# advances-quadtree

./: .gitignore  CMakeLists.txt  LICENSE
new/advdbSpatialTest/: CMakeLists.txt  PointSpatialIndex.h  QBoundingBox.h  QPoint.h  QUtilityFunctions.h  QuadTreeLib.h  README.md  RectangleSpatialIndex.h  SpatialIndexImpl.h  UtilityFunctions.h  data-storage.h  mxcifQuadNode.h  mxcifQuadTree.h  prQuadNode.h  prQuadTree.h  spatial-index-interface.h
new/advdbSpatialTest/Test/: testBulkLoad.h  testCases.h  testCasesQBoundingBox.h  testCasesQPoint.h  testCasesmxcifQuadTree.h  testCasesprQuadTree.h
new/advdbTest/: CMakeLists.txt  QBoundingBox.h  QPoint.h  QuadNode.h  QuadTree.h  QuadTreeLib.h  RectangleSpatialIndex.h  main.cpp  mxcifQuadNode.h  mxcifQuadTree.h  prQuadNode.h  prQuadTree.h  testCases.h
new/advdbTest/Test/: testCases.h  testCasesPoint.h  testCasesRectangle.h  testCasesprQuadTree.h
new/interfaces/: CustomQuadTree.h  Point.h  PointSpatialIndex.h  Rectangle.h  SpatialIndexInterface.h
old/: PQuadtree.cpp
reference/kipt/: Quadtree.h
reference/phishman3579/: AxisAlignedBoundingBox.java  MxCifQuadNode.java  MxCifQuadTree.java  Original_QuadTree.java  PointRegionQuadNode.java  PointRegionQuadTree.java  QuadNode.java  TreePrinter.java  XYPoint.java  X_Comparator.java  Y_Comparator.java  phishman3579_quadtree_tests.java
